--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,4 @@ endif()
 add_executable(read_notes sample/read_notes.cpp)
 target_include_directories(read_notes PRIVATE include)
 target_link_libraries(read_notes PRIVATE ezmidi)
+set_property(TARGET read_notes PROPERTY CXX_STANDARD 11)
