--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,13 @@ else()
 	set(ezmidi_source ${ezmidi_source} src/alsa.cpp)
 endif()
 
-add_library(ezmidi SHARED ${ezmidi_source})
+if (${CMAKE_SYSTEM_NAME} STREQUAL "iOS")
+	set(CMAKE_OSX_DEPLOYMENT_TARGET 9.3)
+	add_library(ezmidi STATIC ${ezmidi_source})
+else()
+	add_library(ezmidi SHARED ${ezmidi_source})
+endif()
+
 set_property(TARGET ezmidi PROPERTY CXX_STANDARD 17)
 target_include_directories(ezmidi PUBLIC include)
 
@@ -33,8 +39,11 @@ else()
 	target_link_libraries(ezmidi PUBLIC "-lasound" Threads::Threads)
 endif()
 
-
-add_executable(read_notes sample/read_notes.cpp)
-target_include_directories(read_notes PRIVATE include)
-target_link_libraries(read_notes PRIVATE ezmidi)
-set_property(TARGET read_notes PROPERTY CXX_STANDARD 11)
+if (${CMAKE_SYSTEM_NAME} STREQUAL "iOS")
+	add_subdirectory(sample/ios)
+else()
+	add_executable(read_notes sample/read_notes.cpp)
+	target_include_directories(read_notes PRIVATE include)
+	target_link_libraries(read_notes PRIVATE ezmidi)
+	set_property(TARGET read_notes PROPERTY CXX_STANDARD 11)
+endif()
