--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(ezmidi)
 include(FetchContent)
 find_package(Threads REQUIRED)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
 add_subdirectory(src)
 
 if (${CMAKE_SYSTEM_NAME} STREQUAL "iOS")
