Add Advanced Sample

--- a/sample/desktop/CMakeLists.txt
+++ b/sample/desktop/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_executable(read_notes read_notes.cpp)
+add_executable(basic_sample basic.c common.h common.c)
+target_link_libraries(basic_sample PUBLIC ezmidi)
 
-target_link_libraries(read_notes PUBLIC ezmidi)
-set_property(TARGET read_notes PROPERTY CXX_STANDARD 11)
+add_executable(advanced_sample advanced.cpp common.h common.c)
+target_link_libraries(advanced_sample PUBLIC ezmidi)
+set_property(TARGET advanced_sample PROPERTY CXX_STANDARD 11)
+
