--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: cpp
 
 before_script:
   - mkdir build
+  - mkdir -p build/header_only/ezmidi
+  - python scripts/make_header_only.py build/header_only/ezmidi/ezmidi.hpp
   - cd build
-  - cmake ..
+  - cmake .. -DTEST_HEADER_ONLY=ON
 
 script:
   - make && make test
