--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,9 +10,10 @@ environment:
     - cmake_generator: '"Visual Studio 15 2017" -A x64'
     
 before_build:
-  - 'mkdir -p c:\build\ezmidi'
+  - 'mkdir -p c:\build\ezmidi\header_only\ezmidi'
   - 'cd c:\build\ezmidi'
-  - 'cmake c:\ezmidi -G %cmake_generator%'
+  - 'python c:\ezmidi\scripts\make_header_only.py c:\build\ezmidi\header_only\ezmidi\ezmidi.hpp'
+  - 'cmake c:\ezmidi -DTEST_HEADER_ONLY=ON -G %cmake_generator%'
     
 configuration:
   - Release
